--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "typescript": "^4.3.5"
   },
   "keywords": [
+    "openapi",
     "mock",
-    "server",
-    "typescript"
+    "server"
   ],
   "author": "qingcheng_ln@126.com",
   "license": "MIT",
@@ -64,6 +64,6 @@
     }
   },
   "engines": {
-    "node": ">=14.16.0"
+    "node": ">=13.1.0"
   }
 }
