--- a/packages/codegen/server/package.json
+++ b/packages/codegen/server/package.json
@@ -18,10 +18,7 @@
     "koa-body": "^4.2.0",
     "koa-router": "^10.0.0",
     "json-schema-faker": "^0.5.0-rcv.17",
-    "mime-type": "^4.0.0",
-    "mime-db": "^1.48.0",
-    "faker": "^5.5.0",
-    "commander": "^8.0.0"
+    "faker": "^5.5.0"
   },
   "keywords": [
     "mock",
@@ -31,6 +28,6 @@
   "author": "qingcheng_ln@126.com",
   "license": "MIT",
   "engines": {
-    "node": ">=14.16.0"
+    "node": ">=13.16.0"
   }
 }
